summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value Direction
    setDirection(Direction.EAST)
                 ^Moria:10: error: ambiguous reference to overloaded definition,
both method forward in class Moria of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
      forward
      ^